# CryptoAPI

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  doxyfile
micro-ecc/: .gitignore  CMakeLists.txt  micro_ecc_api.c  micro_ecc_api.h  micro_ecc_config.c
tests/: CMakeLists.txt
tests/src/: UnitTest.hpp  main.cpp
tinycrypt/: .gitignore  CMakeLists.txt  tinycrypt.cmake  tinycrypt_aes_api.c  tinycrypt_api.h  tinycrypt_config.c  tinycrypt_sha256_api.c
